my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ECONTU/ECONTU.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECONTU.dml:7:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECONTU.dml:10:9: error ECONTU: continue is not possible here
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECONTU.dml:10:9: error ECONTU: continue is not possible here
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECONTU.dml:10:9: error ECONTU: continue is not possible here
